tests/ui/type-alias-impl-trait/wf-nested.pass_sound.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-nested.rs:46:17
   |
LL |         let _ = outer.get();
   |                 ^^^^^^^^^^^
   |                 |
   |                 the parameter type `T` must be valid for the static lifetime...
   |                 ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL |     fn test<T: 'static>() {
   |              +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
